@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-22T08:14:04Z",
-  "count" : 8,
-  "count_minmax" : [ 8, 9 ],
-  "count_decinc" : [ -1, +0 ],
-  "uniques" : 6,
-  "uniques_minmax" : [ 6, 6 ],
-  "uniques_decinc" : [ -0, +0 ]
+  "timestamp" : "2022-05-22T16:15:31Z",
+  "count" : 7,
+  "count_minmax" : [ 7, 9 ],
+  "count_decinc" : [ -2, +0 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 5, 6 ],
+  "uniques_decinc" : [ -1, +0 ]
 }
