@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-22T08:14:04Z",
+  "timestamp" : "2022-05-22T16:15:31Z",
   "count_outdated" : 281,
   "uniques_outdated" : 144,
-  "count" : 327,
-  "uniques" : 175,
+  "count" : 326,
+  "uniques" : 174,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 9 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
+      "count": 7,
+      "count_minmax": [ 7, 9 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 6 ]
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
