@@ -1,11 +1,11 @@
 {
-  "count": 46,
+  "count": 45,
   "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 8,
-      "uniques": 6
+      "count": 7,
+      "uniques": 5
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
