@@ -1,3 +1,10 @@
+2022-05-22T16:15:31Z:
+* notice: last 14d: unq all: 14 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 144 281 / 175 327
+* notice: next accum: outdated-unq outdated-all / unq all: 144 281 / 174 326
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +0 +0 -1 -2 / 5 7
+* notice: changed dates: [2022-05-08]
+
 2022-05-22T08:14:04Z:
 * notice: last 14d: unq all: 14 46
 * notice: prev accum: outdated-unq outdated-all / unq all: 144 281 / 175 328
